@@ -113,11 +113,11 @@ check_updates depends on
 
 =item * Getopt::Long
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Getopt
+=item * Monitoring::Plugin::Getopt
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * POSIX
 
